--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="public/movie-ranking.html">
         <h2>Ranking Project</h2>
     </a>
-    <img src="assets/images/Movie ranking project.png" alt="Movie ranking project"/>
+    <img src="assets/images/Movie Ranking Project.png" alt="Movie ranking project"/>
     <a href="public/birthday-invite.html">
         <h2>Birthday Invite Project</h2>
     </a>
